--- a/pullToRefreshListFragment/build.gradle
+++ b/pullToRefreshListFragment/build.gradle
@@ -1,10 +1,12 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 16
+    compileSdkVersion 25
     buildToolsVersion "25.0.3"
 
     defaultConfig {
+        minSdkVersion 16
+        targetSdkVersion 25
     }
 
     buildTypes {
@@ -17,5 +19,5 @@ android {
 
 dependencies {
     compile project(':library')
-    compile 'com.android.support:support-v4:18.0.0'
+    compile 'com.android.support:support-v4:25.3.1'
 }
